--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "filepond": "^4.28.2",
     "filepond-plugin-image-preview": "^4.6.7",
     "firebase": "^8.7.1",
+    "firebase-admin": "^9.10.0",
     "next": "^11.0.1",
     "next-firebase-auth": "^0.13.2",
     "react": "^17.0.2",
