--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "filepond-plugin-image-preview": "^4.6.7",
     "firebase": "^8.7.1",
     "firebase-admin": "^9.10.0",
+    "moment": "^2.29.1",
     "next": "^11.0.1",
     "next-firebase-auth": "^0.13.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
+    "react-hook-form": "^7.10.1",
     "styled-components": "5.2.3"
   },
   "keywords": [
