live stream implemented

--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "27.1.0",
     "@ckeditor/ckeditor5-react": "3.0.2",
+    "@mux/mux-node": "^3.2.3",
+    "@mux/upchunk": "^2.2.2",
     "@paljs/eva-icon": "^1.0.0",
     "@paljs/icons": "1.0.5",
     "@paljs/ui": "1.1.1",
     "@tinymce/tinymce-react": "3.12.3",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "filepond": "^4.28.2",
+    "filepond-plugin-file-validate-type": "^1.2.6",
     "filepond-plugin-image-preview": "^4.6.7",
     "firebase": "^8.7.1",
     "firebase-admin": "^9.10.0",
@@ -22,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
+    "react-hls-player": "2.0.0",
     "react-hook-form": "^7.10.1",
     "styled-components": "5.2.3"
   },
