--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "next": "^11.0.1",
     "next-firebase-auth": "^0.13.2",
+    "nextjs-cors": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
